Initial help topic is getting too big, so I am putting a version change log here.

Latest version doc : [url=http://forum.micasaverde.com/index.php/topic,16907.msg130221.html#msg130221]http://forum.micasaverde.com/index.php/topic,16907.msg130221.html#msg130221[/url]

[i]Change Log[/i]
[b]Version 2.3 [/b]
[list]
[li]use UI7 Top bar for plugin setting pages[/li]
[li]Fix error when google matrix api is not returning a valid route ( in driving, cycling modes ... ) [/li]
[li]Fix infinite error string concatenation when error happens in the plugin[/li]
[li]url encode pwd to try to support special char in pwd[/li]
[li]remove forceReresh UPNP action return parameter (to remove a warning in logs)[/li]
[li]workaround so that UI7 does not remove a empty variable ( PollingMap ) ![/li]
[/list]
[b]Version 2.1 [/b]
[list]
[li]Does not force a refresh when unMute is called if the phone was already unMuted[/li]
[li]cosmetics UI7[/li]
[li]use of Jobs instead of Runs to avoid Luup deadlock & restarts[/li]
[li]Compat fix for AltUI plugin[/li]
[/list]
[b]Version 1.98 ( was 1.97 beta )[/b]
[list]
[li]"[b]CurLat CurLong[/b]" : Add these 2 in the servicestatevariable so they are reported in the device status xml output page of vera[/li]
[li]"[b]RootPrefix[/b]" : new variable to change prefix of root device name, defaults to (*)[/li]
[/list]
[b]Version 1.96[/b]
Direct Install link: <ip>:3480/data_request?id=action&serviceId=urn:micasaverde-com:serviceId:HomeAutomationGateway1&action=CreatePlugin&PluginNum=4686&Version=25446
[list]
[li]"[b]LocationExtraInfo[/b]" : new variable, cf doc[/li]
[li]taking into account the accuracy reported by iCloud in the "Present" state calculation[/li] 
[li]fix for google map javascript not properly displaying twice on UI7[/li] 
[li]Adding scene tab[/li] 
[/list]
[b]Version 1.95[/b]
[list]
[li]"[b]HouseModeActor[/b]" : new variable, cf doc[/li]
[li]automatic HouseMode determination[/li] 
[/list]
[b]Version 1.93[/b]
[list]
[li]initial UI7 support[/li] 
[/list]